# cpp-sceptor

./: .dir-locals.el  .gitignore  CMakeCache.txt  CMakeLists.txt  CppSceptor.cpp  CppSceptor.h  CppSceptor.h.in  CppSceptorConfig.h  CppSceptorConfig.h.in  README.md
MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.h  mysqrt.cpp
test/: CppSceptorTest.cpp
